Added table of contents to nav.html.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,9 @@
 {% include head.html %}
 
-    {{ content }}
+	{% include nav.html %}
+
+	<main role="main">
+	    {{ content }}
+	</main>
 
 {% include foot.html %}
